GPSServer: reload data trail on refresh.

--- a/src/GPSServer/src/index.html
+++ b/src/GPSServer/src/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>GPS Tracker</title>
+<title>JejaGPS</title>
 <link rel="stylesheet" type="text/css" href="/js/extjs/resources/css/ext-all.css"/>
 <style type="text/css">
 html { height: 100% }
