GPSServer: add form for filtering GPS date.

--- a/src/GPSServer/src/index.html
+++ b/src/GPSServer/src/index.html
@@ -35,9 +35,10 @@ body { height: 100%; margin: 0px; padding: 0px }
 <script type="text/javascript" src="/layout.js"></script>
 </head>
 <body>
-<div id="trail" style="width:30%; height:100%;">
+<div id="trail" style="width=300; height:100%;">
 </div>
-<div map="map_canvas" id="map_canvas" style="width:70%; height:100%;">
+<div map="map_canvas" id="map_canvas"
+	style="width:70%; height:100%; float:left;">
 </div>
 </body>
 </html>
