GPSServer: add function to create path from selected track.
* add function to clear all mark in the map.
* fix front layout.

--- a/src/GPSServer/src/index.html
+++ b/src/GPSServer/src/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 <head>
 <title>JejaGPS</title>
@@ -8,11 +9,13 @@ body { height: 100%; margin: 0px; padding: 0px }
 #map_canvas {
 	height		:100%;
 	margin		:0px 0px 0px 300px;
-	border		:10px solid #ddd;
+	border		:1px solid #cce;
 	background	:silver;
 }
 #trail {
+	position	:absolute;
 	height		:100%;
+	display		:block;
 	margin		:0px 300px 0px 0px;
 	width		:300px;
 	float		:left;
