GPSServer: fix grid layout.
Vertical scroll is not appeared if data is large than view area.

* GPSServer: fix data trail query.

--- a/src/GPSServer/src/index.html
+++ b/src/GPSServer/src/index.html
@@ -4,6 +4,11 @@
 <title>JejaGPS</title>
 <link rel="stylesheet" type="text/css" href="/js/extjs/resources/css/ext-all.css"/>
 <style type="text/css">
+/* fix on extjs css */
+.x-panel-body {
+	overflow	:auto;
+}
+
 html { height: 100%; margin: 0px; padding: 0px }
 body { height: 100%; margin: 0px; padding: 0px }
 #map_canvas {
